# vibeline

./: .contacts.txt.example  .dockerignore  .env.example  .env.swp  .flake8  .gitignore  .markdownlint-cli2.mjs  .pre-commit-config.yaml  .python-version  .vocabulary.txt.example  AGENTS.txt  CHANGELOG.md  CONTACTS.txt  Dockerfile  LICENSE  LINTING_SETUP.md  Makefile  PLUGIN.md  README.md  TODO.md  VOCABULARY.txt  archive.sh  dev-setup.sh  docker-compose.yml  extract.sh  monthly_summary.sh  package-lock.json  package.json  post_process.sh  process.sh  process_voice_memos.sh  pyproject.toml  requirements.txt  run.sh  setup.sh  summarize.sh  summarize_transcripts.py  test_transcript_cleaner.py  transcribe.sh  watch.sh  (+3 more)
.cursor/rules/: commit-style.mdc
.github/: BRANCH_PROTECTION.md
.github/workflows/: docker.yml  lint.yml
plugins/: action_item.yaml  action_items_todo.all.or.md  action_items_todo.yaml  app_idea.yaml  blog_post.md  blog_post.yaml  blossom.yaml  build_app.yaml  decision.yaml  decision.yaml.bak  dm.yaml  dm_agent.yaml  idea.yaml.bak  mood.yaml  shownote.yaml  shownotes.yaml  summary.all.yaml  summary.yaml  svg.yaml  svg.yaml.bak  test_transcript_20250401_135009.md  therapist.yaml  title.yaml  todo_txt.yaml  todo_txt.yaml.bak  transcript.yaml  transcription.yaml  yolopost.yaml
prompts/: blog_post.md  default.md  idea_app.md  summary.md
run/: build_idea.ts
scripts/: dm.sh  dm_agent.sh  test_dm.sh  version.py
src/: extract.py  extract.sh  llm_client.py  monthly_summary.py  plugin_manager.py  post_process.py  process.sh  process_voice_memos.sh  summarize.py  summarize.sh  summarize_transcripts.py  transcript_cleaner.py  watch_voice_memos.py
src/vibeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_basic.py  transcript_cleaner.py
